# beancount-data

./: README.md  pyproject.toml
.circleci/: config.yml
beancount_data/: __init__.py  data_types.py  schema.fbs  version.py
beancount_data/fbs/data_types/: Amount.py  Balance.py  Beancount.py  Booking.py  Close.py  Commodity.py  Cost.py  CostSpec.py  CostTypes.py  Custom.py  CustomValue.py  CustomValueType.py  Date.py  Document.py  Entry.py  EntryPayload.py  Event.py  MapItem.py  MapValueType.py  Note.py  Open.py  Pad.py  Posting.py  Price.py  Transaction.py
fbs/: schema.fbs
