[tool.poetry]
name = "beancount-data"
version = "2.0.3"
description = "Pydantic data models for exporting Beancount data"
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
flatbuffers = { version = "^23.5", optional = true }

[tool.poetry.extras]
flatbuffers = ["flatbuffers"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
